Retirada de imagem

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="design artesanal/WhatsApp Image 2024-08-08 at 15.40.35 (1).jpeg" alt="Descrição da Imagem 1" class="zoomable">
                 <img src="design artesanal/WhatsApp Image 2024-08-08 at 15.40.35 (2).jpeg" alt="Descrição da Imagem 2" class="zoomable">
                 <img src="design artesanal/WhatsApp Image 2024-08-08 at 15.40.37 (3).jpeg" alt="Descrição da Imagem 3" class="zoomable">
-                <img src="design artesanal/WhatsApp Image 2024-08-08 at 14.26.32.jpeg" alt="Descrição da Imagem 3" class="zoomable">
+                <img src="design artesanal/WhatsApp Image 2024-08-08 at 14.26.37 (1).jpeg" alt="Descrição da Imagem 3" class="zoomable">
                 <img src="design artesanal/WhatsApp Image 2024-08-08 at 14.26.37 (2).jpeg" alt="Descrição da Imagem 3" class="zoomable">
             </div><br>
             <p>Combina princípios de design com habilidades artesanais para criar produtos funcionais e esteticamente agradáveis. Cada peça é feita com atenção aos detalhes e materiais, resultando em um trabalho que une estética e utilidade com uma forte conexão com a tradição artesanal.</p>
